Fix align of messages

--- a/src/main/resources/static/css/webapp.css
+++ b/src/main/resources/static/css/webapp.css
@@ -8,8 +8,8 @@
 .messages {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-content: flex-start;
+  justify-content: space-evenly;
 }
 
 .inline {
